<resources>
    <string name="task_claim">Otan työn alle</string>
    <string name="task_unclaim">Vapauta tehtävä</string>
    <string name="task_complete">Merkitse valmiiksi</string>
    <string name="task_reopen">Palauta tehtäviin</string>
    <string name="task_cancel">Peru tehtävä</string>
    <string name="task_move">Siirrä tehtävää</string>
    <string name="task_earlier">Siirrä aiemmaksi</string>
    <string name="task_later">Siirrä myöhemmäksi</string>
    <string name="task_claimed_by">%1$s tekee tätä</string>
    <string name="task_completed_by">Valmis · %1$s</string>
    <string name="task_cancelled_by">Peruttu · %1$s</string>
    <string name="task_former_member">Entinen jäsen</string>
    <string name="task_household_member">Talouden jäsen</string>
    <string name="task_confirm_other">%1$s tekee tätä tehtävää. Merkitäänkö se silti valmiiksi?</string>
    <string name="task_changed_retry">Tehtävä muuttui tai toiminto ei onnistunut. Tarkista tilanne ja yritä uudelleen.</string>
    <string name="task_active_view">Tehtävät</string>
    <string name="task_history_view">Valmiit ja perutut</string>
    <string name="task_claim_conflict">Tehtävän tekijä vaihtui. Tarkista nykyinen tilanne ennen uutta yritystä.</string>
    <string name="task_state_conflict">Tehtävän tila tai järjestys muuttui. Pyyntöäsi ei tehty uudelleen automaattisesti.</string>
    <string name="visibility_open">Avoin</string>
    <string name="visibility_completed">Valmis</string>
    <string name="visibility_cancelled">Peruttu</string>
    <string name="queue_filter">Suodata tehtäviä</string>
    <string name="queue_status">Tila</string>
    <string name="queue_assignment">Tekijä</string>
    <string name="queue_active">Avoimet</string>
    <string name="queue_empty">Ei avoimia tehtäviä.</string>
    <string name="queue_empty_filtered">Ei tehtäviä näillä suodattimilla.</string>
</resources>
